--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-complete-guide",
-  "homepage": "https://tanishbawa.github.io/Food-Ordering",
+  "homepage": "https://tanishbawa.github.io/Food-ordering",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
